--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,3 +2,5 @@
   <%= gravatar_for @user %>
   <%= @user.name %>
 </h1>
+<p style="text-align:center"><%= @user.description %></p>
+<p style="text-align:center"><%= @user.location %></p
