--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,9 +4,13 @@
       <section class="user_info">
         <%= render 'shared/user_info' %>
       </section>
+      
+      <%= render 'shared/follow' %>
+      
       <section class="micropost_form">
         <%= render 'shared/micropost_form' %>
       </section>
+      
     </aside>
   </div>
 <% else %>
