--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,6 +8,9 @@
       <%= @user.description %><br>
       <%= @user.location %><br>
     </section>
+    
+    <%= render 'shared/follow' %>
+    
   </aside>
   <div class="col-md-8">
     
@@ -16,7 +19,11 @@
     <% if @user.microposts.any? %>
       <h3>Microposts (<%= @user.microposts.count %>)</h3>
       <ol class="microposts">
-        <%= render @microposts %>
+        <%# render @microposts %>
+        
+        <% @microposts.each do |micropost| %>
+          <%= render partial: 'microposts/micropost', locals: { micropost: micropost } %>
+        <% end %>
       </ol>
     <% end %>
   </div>
