--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -2,6 +2,9 @@
   <%= render 'shared/error_messages', object: f.object %>
   <div class="field">
     <%= f.text_area :content, placeholder: "Compose new micropost..." %>
+    
+    <%= f.file_field :image, :style=>"border:0;"%>
   </div>
+  
   <%= f.submit "Post", class: "btn btn-primary" %>
 <% end %>
