--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,4 @@
 <h1>Settings</h1>
-
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@user) do |f| %>
@@ -18,7 +17,7 @@
       <%= f.label :location %>
       <%= f.text_field :location, class: 'form-control' %>
 
-      <%= f.submit "update", class: "btn btn-sm btn-primary" %>
+      <%= f.submit t("update"), class: "btn btn-sm btn-primary" %>
     <% end %>
   </div>
 </div>
